# weathersensors-cli

./: LICENSE  README.md  pyproject.toml  sensors.ini
src/: main.py
src/ADS7830/: __init__.py  constants.py
src/BME680/: __init__.py
src/DS18B20/: __init__.py  constants.py
tests/: conftest.py  test_bme680.py  test_ds18b20.py
